--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,7 @@
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
 		</dependency>
 
 		<dependency>
@@ -104,7 +105,8 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			</dependency>
+			<version>4.12</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.hibernate</groupId>
